# turtlebot3_novosib

./: .gitattributes  .gitignore  README.md
robot/camera_web/: camera_web.py  city_map_web.py
scripts/: deploy_city_web.ps1  install_city_web_on_robot.sh  install_robot_services.sh  run_laptop_yolo.ps1
scripts/tb3_nav/: fastdds_no_shm.xml  restart_tb3_direct_scan.sh  restart_tb3_rectified.sh  start_tb3_base.sh  start_tb3_map_nav.sh  start_tb3_slam_nav.sh  stop_tb3_bringup.sh  stop_tb3_nav_stack.sh  tb3_nav_status.sh  tb3_ros_env.sh
src/coin_d4_driver/params/: single_lidar_node.yaml
src/coin_d4_driver/src/lidar_sdk/: serial_port.cpp
src/ld08_driver/: CMakeLists.txt
src/ld08_driver/include/: cmd_interface_linux.hpp  lipkg.hpp  pointdata.hpp  slbf.hpp  transform.hpp
src/ld08_driver/src/: cmd_interface_linux.cpp  lipkg.cpp  main.cpp  slbf.cpp  transform.cpp
src/robot_actions/: package.xml  setup.py
src/scan_rectifier/: package.xml  setup.cfg  setup.py
src/scan_rectifier/scan_rectifier/: scan_rectifier_node.py
src/tb3_camera_web/: CMakeLists.txt  package.xml
src/tb3_camera_web/launch/: camera_web.launch.py  yolo_udp_bridge.launch.py
src/tb3_camera_web/scripts/: camera_web_node.py  web_rviz_state_node.py  yolo_udp_bridge_node.py
src/tb3_rplidar_c1/: CMakeLists.txt  package.xml
src/tb3_rplidar_c1/config/: nav2_burger.yaml  tb3_rplidar_c1_2d.lua
src/tb3_rplidar_c1/launch/: cartographer.launch.py  nav2.launch.py  nav2_slam.launch.py  navigation_core.launch.py
src/turtlebot3/turtlebot3_bringup/launch/: robot.launch.py
src/turtlebot3/turtlebot3_bringup/param/: burger.yaml
src/turtlebot3/turtlebot3_description/urdf/: turtlebot3_burger.urdf  turtlebot3_burger.urdf.autotest_patch.diff  turtlebot3_burger.urdf.autotest_report.txt  turtlebot3_burger.urdf.bak_20260425_065242
src/turtlebot3_controller/: package.xml  setup.py
src/turtlebot3_controller/turtlebot3_controller/: turtlebot3_controller.py
src/turtlebot3_navigation/: package.xml  setup.py
src/turtlebot3_navigation/launch/: navigation_server.launch.py
src/turtlebot3_navigation/turtlebot3_navigation/: turtlebot3_navigation_server.py
src/usb_camera_pkg/: package.xml  setup.py
src/usb_camera_pkg/usb_camera_pkg/: camera_subscriber.py  usb_camera_node.py
systemd/: camera-web.service  city-map-web.service  web-rviz-state.service  yolo-udp-bridge.service
tools/: laptop_yolo_sign_bridge.py
urdf_tools/: scan_once.yaml  tb3_urdf_axis_autotest.py  turtlebot3_burger.latest_backup.urdf
