<?xml version="1.0"?>
<package format="3">
  <name>scan_rectifier</name>
  <version>0.0.1</version>
  <description>LaserScan angular rectifier for calibrated RPLIDAR C1 scans.</description>
  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
