<?xml version="1.0"?>
<package format="3">
  <name>tb3_camera_web</name>
  <version>0.1.0</version>
  <description>ROS 2 wrapper for the TurtleBot3 MJPEG camera web server.</description>
  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
